# taazi-khabar-be

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: batch-generate.yml  ci.yml  daily-scrape.yml
alembic/: env.py
alembic/versions/: 001_initial.py  1abcd9c5bc06_add_user_feedback_to_ai_interactions.py  c9d8f5b7fcef_add_model_registry_table.py  cc8027c0e0ac_add_image_url_to_articles.py  d5e8f3a1b2c0_add_bookmarks_table.py  e7f2a4b3c1d0_add_cached_questions_table.py
app/: config.py  deps.py  main.py
app/ai/: model_registry.py  orchestrator.py
app/api/: admin.py  analytics.py  articles.py  auth.py  bookmarks.py  categories.py  history.py  quizzes.py  router.py  scraping.py
app/models/: __init__.py  ai_interaction.py  article.py  bookmark.py  cached_question.py  category.py  exam_question.py  model_registry.py  quiz.py  training_dataset.py  user.py
app/schemas/: article.py  quiz.py  user.py
app/scrapers/: base.py  indian_express.py  the_hindu.py
app/scripts/: backfill_categories.py  backfill_images.py  batch_generate_all.py  categorize_articles.py  compare_models.py  cron_scrape.py  filter_articles.py  regenerate_all_summaries.py  scrape_date.py  seed_exam_questions.py  summarize_existing.py
app/services/: article_service.py  quiz_service.py  training_service.py  (+1 more)
docs/: architecture.md  training-glossary.md  training-plan.md
notebooks/: qlora_finetune.ipynb  qlora_finetune_kaggle.ipynb  taazi_training_kaggle.ipynb
tests/: conftest.py  test_ai_unit.py  test_quiz_caching.py  test_scrapers.py
(+26 files in other folders)
